# genome_entropy

./: .gitignore  .readthedocs.yaml  =1.80  ML_IMPLEMENTATION_SUMMARY.md  MULTI_GPU_FIX_SUMMARY.md  README.md  READTHEDOCS_SETUP.md  REFACTORING_SUMMARY.md  VERSION_MANAGEMENT.md  citation.cff  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docs.yml  python-ci.yml
docs/: ML_CLASSIFIER.md  Makefile  README.md  requirements.txt  token_estimation.md  unified_output_format.md
docs/source/: api.rst  changelog.rst  cli.rst  conf.py  development.rst  index.rst  installation.rst  quickstart.rst  token_estimation.md  user_guide.rst
example_data/: picobirnaviridae.gbk
examples/: gzip_example.py  ml_classifier_example.py  ml_file_split_example.py  multi_gpu_example.py  run_end_to_end.sh  token_estimation_example.py
notebooks/: README.md  plot_json.ipynb
slurm/: README.md  download.slurm  encoder.slurm  estimate_tokens.slurm  pip_install.slurm  pipeline.slurm
slurm/nvidia/: README.md  encoder.slurm  estimate_tokens.slurm  pip_install.slurm  pipeline.slurm  pytest.slurm
slurm/rocm/: README.md
src/genome_entropy/: __init__.py  config.py  errors.py  logging_config.py
src/genome_entropy/cli/: __init__.py  main.py
src/genome_entropy/cli/commands/: __init__.py  download.py  encode3di.py  entropy.py  estimate_tokens.py  fasta_to_protein.py  ml.py  orf.py  run.py  translate.py
src/genome_entropy/encode3di/: __init__.py  encoder.py  gpu_utils.py  modernprost.py  multi_gpu.py  prostt5.py  token_estimator.py  types.py
src/genome_entropy/entropy/: shannon.py
src/genome_entropy/io/: __init__.py  fasta.py  genbank.py  jsonio.py
src/genome_entropy/ml/: __init__.py  classifier.py  file_split.py  models.py
src/genome_entropy/orf/: finder.py  types.py
src/genome_entropy/pipeline/: __init__.py  runner.py  types.py
src/genome_entropy/translate/: translator.py
src/orf_entropy/: __init__.py  config.py  logging_config.py
src/orf_entropy/cli/: main.py
src/orf_entropy/cli/commands/: download.py  encode3di.py  estimate_tokens.py  run.py
src/orf_entropy/encode3di/: __init__.py  encoder.py  encoding.py  multi_gpu.py  prostt5.py  token_estimator.py
src/orf_entropy/entropy/: shannon.py
src/orf_entropy/io/: fasta.py
src/orf_entropy/orf/: types.py
src/orf_entropy/pipeline/: runner.py
tests/: __init__.py  conftest.py  test_basic.py  test_cli_smoke.py  test_encode3di_input_formats.py  test_encoder_methods.py  test_encoder_reuse.py  test_entropy.py  test_estimate_tokens_model_selection.py  test_file_split.py  test_genbank.py  test_gpu_discovery.py  test_gzip_io.py  test_logging_config.py  test_ml_classifier.py  test_modernprost_encoder.py  test_multi_gpu_encoding.py  test_multi_gpu_reuse.py  test_orf_finder.py  test_prostt5_integration.py  test_token_budget_batches.py  test_token_estimator.py  test_translation.py  test_unified_output.py
